--- a/bib/references.bib
+++ b/bib/references.bib
@@ -22,7 +22,7 @@ series= {JMIR}
 volume="8",
 number="3",
 pages="e13011",
-keywords={type:app , telemedicine, pregnancy, gestational weight gain, diet, exercise, smartphone, mobile phone},
+keywords={type:application , telemedicine, pregnancy, gestational weight gain, diet, exercise, smartphone, mobile phone},
 abstract="Background: Excessive gestational weight gain is common and associated with adverse outcomes both in the short and long term. Although traditional lifestyle-based interventions have shown to mitigate excess gestational weight gain, little is known about whether mobile Health (mHealth) apps can promote healthy weight gain, diet, and physical activity during pregnancy. Objective: The primary aim of the HealthyMoms trial is to determine the effectiveness of a smartphone app (HealthyMoms) for mitigating excess gestational weight gain during pregnancy. Secondary aims are to determine the effectiveness of the app on dietary habits, physical activity, body fatness, and glycemia during pregnancy. Methods: HealthyMoms is a two-arm randomized controlled trial. Women are being recruited at routine visits at the maternity clinics in Link{\"o}ping, Norrk{\"o}ping and Motala, Sweden. Women are randomized to the control or intervention group (n=150 per group). All women will receive standard care, and women in the intervention group will also receive the HealthyMoms smartphone app. Results: Recruitment of participants to the trial was initiated in October 2017, and 190 women have so far completed the baseline measurement. The baseline measures are estimated to be finalized in December 2019, and the follow-up measures are estimated to be completed in June 2020. Conclusions: This project will evaluate a novel smartphone app intervention integrated with existing maternity health care. If successful, it has great potential to be implemented nationally in order to promote healthy weight gain and health behaviors during pregnancy. International Registered Report Identifier (IRRID): DERR1-10.2196/13011 ",
 issn="1929-0748",
 doi = {10.2196/13011},
@@ -49,7 +49,7 @@ day="19",
 volume="22",
 number="8",
 pages="e17406",
-keywords={type:research study,  decision, aid, mild cognitive impairment, elderly, decision support technique, aging},
+keywords={type:Controlled Study,  decision, aid, mild cognitive impairment, elderly, decision support technique, aging},
 abstract="Background: Mild cognitive impairment (MCI) is often considered a transitional state between normal and pathologic (eg, dementia) cognitive aging. Although its prognosis varies largely, the diagnosis carries the risk of causing uncertainty and overtreatment of older adults with MCI who may never progress to dementia. Decision aids help people become better informed and more involved in decision making by providing evidence-based information about options and possible outcomes and by assisting them in clarifying their personal values in relation to the decision to be made. Objective: This study aimed to incorporate features that best support values clarification and adjust the level of detail of a web-based decision aid for individuals with MCI. Methods: We conducted a rapid review to identify options to maintain or improve cognitive functions in individuals with MCI. The evidence was structured into a novel web-based decision aid designed in collaboration with digital specialists and graphic designers. Qualitative and user-centered evaluations were used to draw on users' knowledge, clarify values, and inform potential adoption in routine clinical practice. We invited clinicians, older adults with MCI, and their caregivers to evaluate the decision aid in 6 consecutive rounds, with new participants in each round. Quantitative data were collected using the Values Clarity and Informed subscales of the Decisional Conflict Scale, the System Usability Scale, the Ottawa Acceptability questionnaire, and a 5-point satisfaction rating scale. We verified their comprehension using a teach-back method and recorded usability issues. We recorded the audio and computer screen during the session. An inductive thematic qualitative analysis approach was used to identify and describe the issues that arose. After each round, an expert panel met to prioritize and find solutions to mitigate the issues. An integrated analysis was conducted to confirm our choices. Results: A total of 7 clinicians (social workers, nurses, family physicians, psychologists) and 12 older (≥60 years) community-dwelling individuals with MCI, half of them women, with education levels going from none to university diploma, were recruited and completed testing. The thematic analysis revealed 3 major issues. First, the user should be guided through the decision-making process by tailoring the presentation of options to users' priorities using the values clarification exercise. Second, its content should be simple, but not simplistic, notably by using information layering, plain language, and pictograms. Third, the interface should be intuitive and user friendly, utilize pop-up windows and information tips, avoid drop-down menus, and limit the need to scroll down. The quantitative assessments corroborated the qualitative findings. Conclusions: This project resulted in a promising web-based decision aid that can support decision making for MCI intervention, based on the personal values and preferences of the users. Further ongoing research will allow its implementation to be tested in clinical settings. ",
 issn="1438-8871",
 doi={10.2196/17406},
@@ -72,7 +72,7 @@ day="16",
 volume="15",
 number="10",
 pages="e223",
-keywords={type: research study, adherence, usage, Web-based intervention, mixed method study},
+keywords={type:Controlled Study, adherence, usage, Web-based intervention, mixed method study},
 abstract="Background: Web-based interventions show promise in promoting a healthy lifestyle, but their effectiveness is hampered by high rates of nonusage. Predictors and reasons for (non)usage are not well known. Identifying which factors are related to usage contributes to the recognition of subgroups who benefit most from Web-based interventions and to the development of new strategies to increase usage. Objective: The aim of this mixed methods study was to explore patient, intervention, and study characteristics that facilitate or impede usage of a Web-based physical activity intervention for patients with knee and/or hip osteoarthritis. Methods: This study is part of a randomized controlled trial that investigated the effects of Web-based physical activity intervention. A total of 199 participants between 50-75 years of age with knee and/or hip osteoarthritis were randomly assigned to a Web-based intervention (n=100) or a waiting list (n=99). This mixed methods study used only data from the individuals allocated to the intervention group. Patients were defined as users if they completed at least 6 out of 9 modules. Logistic regression analyses with a stepwise backward selection procedure were executed to build a multivariate prediction usage model. For the qualitative part, semistructured interviews were conducted. Both inductive and deductive analyses were used to identify patterns in reported reasons for nonusage. Results: Of the 100 participants who received a password and username, 46 completed 6 modules or more. Multivariate regression analyses revealed that higher age (OR 0.94, P=.08) and the presence of a comorbidity (OR 0.33, P=.02) predicted nonusage. The sensitivity analysis indicated that the model was robust to changes in the usage parameter. Results from the interviews showed that a lack of personal guidance, insufficient motivation, presence of physical problems, and low mood were reasons for nonusage. In addition, the absence of human involvement was viewed as a disadvantage and it negatively impacted program usage. Factors that influenced usage positively were trust in the program, its reliability, functionality of the intervention, social support from family or friends, and commitment to the research team. Conclusions: In this mixed methods study, we found patient, intervention, and study factors that were important in the usage and nonusage of a Web-based PA intervention for patients with knee and/or hip osteoarthritis. Although the self-guided components offer several advantages, particularly in relation to costs, reach, and access, we found that older patients and participants with a comorbid condition need a more personal approach. For these groups the integration of Web-based interventions in a health care environment seems to be promising. Trial Registration: The Netherlands National Trial Register (NTR): NTR2483; http://www.trialregister.nl/trialreg/admin/rctview.asp?TC=2483 (Archived by Webcite at http://www.webcitation.org/67NqS6Beq). ",
 issn="14388871",
 doi={10.2196/jmir.2742},
@@ -92,7 +92,7 @@ url="https://doi.org/10.2196/jmir.2742",
   title = {Feasibility,  acceptability and efficacy of a web-based computer-tailored physical activity intervention for pregnant women - the Fit4Two randomised controlled trial},
   journal = {{BMC} Pregnancy and Childbirth}
   abstract= {Background: Physical activity (PA) during pregnancy is associated with a variety of health benefits including a reduced risk of pregnancy related conditions such as pre-eclampsia and pregnancy-induced hypertension and leads to greater control over gestational weight gain. Despite these associated health benefits, very few pregnant women are sufficiently active. In an attempt to increase health outcomes, it is important to explore innovative ways to increase PA among pregnant women. Therefore, the aim of this study was to assess the feasibility, acceptability and efficacy of a four week web-based computer-tailored PA intervention among pregnant women.}
-  keywords= {type: article journal, physical activity, pregnancy, online, intervention, behavior change, Web-Based, Internet }
+  keywords= {type:article journal, physical activity, pregnancy, online, intervention, behavior change, Web-Based, Internet }
 }
 
 
@@ -107,7 +107,7 @@ url="https://doi.org/10.2196/jmir.2742",
   author = {Leona Cilar, Budler and Marko, Budler},
   title = {Physical activity during pregnancy: a systematic review for the assessment of current evidence with future recommendations},
   journal = {{BMC} Sports Science,  Medicine and Rehabilitation},
-  keywords={type: article journal, Exercise, Intervention, Sport, Lifestyle, Health outcome},
+  keywords={type:article journal, Exercise, Intervention, Sport, Lifestyle, Health outcome},
   abstract = {Background: Physical activity is essential to maternal and infant health. Healthcare professionals should inform pregnant women about benefits of physical activity to prevent possible health issues. Those recommendations should elaborate on relevant contemporary evidence. The aim of this study was to review evidence-based recommendations for physical activity during pregnancy.}
 }
 
@@ -118,7 +118,7 @@ journal = {Maternal \& Child Nutrition},
 volume = {17},
 number = {1},
 pages = {e13068},
-keywords = {type:artical journal, behaviour, experiences of pregnancy, nutrition education, physical activity, pregnancy and nutrition, weight gain},
+keywords = {type:article journal, behaviour, experiences of pregnancy, nutrition education, physical activity, pregnancy and nutrition, weight gain},
 doi = {https://doi.org/10.1111/mcn.13068},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/mcn.13068},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/mcn.13068},
@@ -140,7 +140,7 @@ year = {2021}
   title = {Health Benefits of Physical Activity during Pregnancy},
   abstract= {While early studies on the effects of leisure time physical activity (LTPA) during pregnancy were concerned about possible harm to the mother or fetus, these fears have not been substantiated. Instead, a growing body of literature has documented several health benefits related to pregnancy LTPA. The purpose of this article was to synthesize evidence from epidemiological studies conducted in the United States, Canada, and Scandinavia on the benefits of LTPA and exercise during pregnancy with regard to maternal health, pregnancy outcomes, and child health. We focused on studies evaluating relations between pregnancy LTPA and gestational diabetes, hypertensive disorders, excessive gestational weight gain, birth weight, timing of delivery, and child body composition. The bulk of evidence supports beneficial effects of pregnancy LTPA on each outcome; however, most previous studies have been observational and used self-reported LTPA at only one or two time points in pregnancy. Limitations of the current knowledge base and suggestions for future research on the health benefits of LTPA during pregnancy are provided.},
   journal = {Medicine Science in Sports Exercise},
-  keywords = {type: artical journal, BIRTH, EXERCISE, FETAL, PRENATAL}
+  keywords = {type:article journal, BIRTH, EXERCISE, FETAL, PRENATAL}
 }
 
 
@@ -158,7 +158,7 @@ year = {2021}
   journal = {Archives of Physical Medicine and Rehabilitation},
   abstract ={To conduct a systematic review to determine the efficacy of exercise-based interventions on improving performance-based measures
 of physical function and markers of physical frailty in community-dwelling, frail older people.},
-keywords= {type: artical journal, Exercise, Frail elderly, Meta-analysis, Rehabilitation; Review,
+keywords= {type:article journal, Exercise, Frail elderly, Meta-analysis, Rehabilitation; Review,
 systematic}
 }
 
@@ -175,7 +175,7 @@ systematic}
   title = {Exercise interventions for older adults: A systematic review of meta-analyses},
   journal = {Journal of Sport and Health Science},
   abstract ={The evidence concerning which physical exercise characteristics are most effective for older adults is fragmented. We aimed to characterize the extent of this diversity and inconsistency and identify future directions for research by undertaking a systematic review of meta-analyses of exercise interventions in older adults.},
-  keywords ={type: systematic review, Intervention,Meta-analyses, Old,Physical exercise,Systematic review}
+  keywords ={type:systematic review, Intervention,Meta-analyses, Old,Physical exercise,Systematic review}
 }
 
 @article{Jadczak2018,
@@ -191,5 +191,5 @@ systematic}
   title = {Effectiveness of exercise interventions on physical function in community-dwelling frail older people: an umbrella review of systematic reviews},
   journal = {{JBI} Database of Systematic Reviews and Implementation Reports},
   abstract = {Exercise is said to have a positive impact on muscle mass and strength which improves physical function and hence is beneficial for the treatment of frailty. Several systematic reviews discuss the effects of exercise interventions on physical function parameters, such as strength, mobility, gait, balance and physical performance, and indicate that multi-component exercise, including resistance, aerobic, balance and flexibility training, appears to be the best way in which to improve physical function parameters in frail older people. However, there is still uncertainty as to which exercise characteristics (type, frequency, intensity, duration and combinations) are the most effective and sustainable over the long-term.},
-  keywords = {type: systematic review, Community-dwelling, exercise interventions, frailty, older people, umbrella review }
+  keywords = {type:systematic review, Community-dwelling, exercise interventions, frailty, older people, umbrella review }
 }
